[WebVR] Handle slow connecting devices.

A race condition exists when entering WebVR while already in VR (from
VrShell) which slows down devices connecting.  We keep track if we have
seen an immediate handling of the device without a connection (which
signifies that libraries aren't loaded) which allows us to return a 0
count in that case, but return non-zero in the case where a device will
eventually connect.

BUG=729614

Review-Url: https://codereview.chromium.org/2916423002
Cr-Commit-Position: refs/heads/master@{#477103}

Former-commit-id: c0376a2d193d886e60e2e618be407e4a262446df